<resources>
    <string name="app_name">Lishe</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="tagline">Sharing food is caring</string>
    <string name="already_have_an_account">I Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="individual">An Individual</string>
    <string name="organisation">An Organisation</string>
    <string name="collecting_food">Collecting Food</string>
    <string name="listing_food">Listing Food</string>
    <string name="i_will_be">I will be:</string>
    <string name="create_a_food_listing">Create a Food Listing</string>
    <string name="food_title">Food Title</string>
    <string name="food_description">Food Description</string>
    <string name="expiration_date">Expiration Date %s</string>
    <string name="select_location">Select Location</string>
    <string name="select_image">Select Image</string>
    <string name="food_listing_details">Food Listing Details</string>
    <string name="jonh_doe">Jonh Doe</string>
    <string name="burger">Burger</string>
    <string name="description">A hamburger (or burger for short) is a food consisting of fillings —usually a patty of ground meat, typically beef—placed inside a sliced bun or bread roll.</string>
    <string name="request_listing">Request Listing</string>
    <string name="palceholder_tel">+254 712 345 678</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="placeholder_email">johndoe@gmail.com</string>
    <string name="rating">Rating</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_listings">My listings</string>
    <string name="sign_out">Sign Out</string>
    <string name="stats">Stats</string>
    <string name="error_password">Password cannot be less than 8</string>
    <string name="error_email">Enter a valid email address</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="error_required">Required Field</string>
    <string name="error_passwords_dont_match">Passwords do not match</string>
    <string name="upload_image">Upload Image</string>
    <string name="user_rating">"Rating: %s"</string>
    <string name="error_longer_than_20">Should be longer than 20 characters</string>
    <string name="error_longer_than_10">Should be longer than 10</string>
    <string name="date_format">%s/%s/%s</string>
    <string name="select_expiration_date">Select Expiration Date</string>
    <string name="submit">Submit</string>
    <string name="map_id">8a8ed0ae145cfff4</string>
    <string name="call_user">call user</string>
    <string name="log_pickup">Log pickup</string>
    <string name="edit_listing">Edit Listing</string>
    <string name="user_name">%s %s</string>
    <string name="personal_details">Personal Details</string>
    <string name="rating_value">%s</string>
    <string name="user_phone_number">%s</string>


</resources>