<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserProfileFragment">

    <TextView
        android:id="@+id/my_profile"
        style="@style/Widget.Lishe.HeadingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="My Profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/personal_details"
        style="@style/Widget.Lishe.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/personal_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_profile"
        app:layout_constraintEnd_toStartOf="@id/edit_profile_icon_button"/>

    <Button
        android:id="@+id/edit_profile_icon_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:icon="@drawable/ic_edit"
        app:iconGravity="end"
        app:layout_constraintTop_toTopOf="@id/personal_details"
        app:layout_constraintBottom_toBottomOf="@id/personal_details"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_profile_details_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_details">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Lishe.Avatar"
                android:layout_margin="8dp"
                app:cardCornerRadius="27dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_activity_options">

                <ImageView
                    android:id="@+id/profile_picture_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_avatar" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_profile_name_text_view"
                    style="@style/Widget.Lishe.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    tools:text="@string/jonh_doe" />

                <TextView
                    android:id="@+id/user_profile_phone_text_view"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    tools:text="@string/palceholder_tel" />

                <TextView
                    android:id="@+id/user_profile_email_text_view"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    tools:text="@string/placeholder_email" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_profile_rating_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/purple"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/user_profile_details_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            style="@style/Widget.Lishe.TextView"
            android:layout_width="160dp"
            android:layout_height="32dp"
            android:padding="0dp"
            android:singleLine="true"
            android:gravity="center_horizontal|bottom"
            android:text="@string/rating"/>

        <TextView
            android:id="@+id/user_rating_text_view"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            tools:text="@string/rating_value"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/user_profile_listings_button"
        style="@style/Widget.Lishe.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/my_listings"
        app:icon="@drawable/ic_view_list"
        app:iconGravity="end"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_rating_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/user_profile_reviews_button"
        style="@style/Widget.Lishe.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/my_reviews"
        app:icon="@drawable/ic_reviews"
        app:iconGravity="end"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_listings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/user_profile_stats_button"
        style="@style/Widget.Lishe.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/stats"
        app:icon="@drawable/ic_graph"
        app:iconGravity="end"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_reviews_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/user_profile_create_listing_button"
        style="@style/Widget.Lishe.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_a_food_listing"
        app:icon="@drawable/ic_create"
        app:iconGravity="end"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_stats_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/user_profile_logout_button"
        style="@style/Widget.Lishe.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_out"
        app:icon="@drawable/ic_logout"
        app:iconGravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>