<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CreateListingActivity">

    <TextView
        android:id="@+id/create_listing"
        style="@style/Widget.Lishe.HeadingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_a_food_listing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/create_listing_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintTop_toBottomOf="@id/create_listing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_listing_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/food_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_listing_progress_bar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_listing_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_listing_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/food_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_listing_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_listing_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:minLines="5"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_listing_select_expiration_date_button"
        style="@style/Widget.Lishe.SecondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:icon="@drawable/ic_calendar"
        app:iconGravity="end"
        android:text="@string/select_expiration_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_listing_description" />

    <TextView
        android:id="@+id/create_listing_expiration_date_text_view"
        style="@style/Widget.Lishe.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/create_listing_select_expiration_date_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/create_listing_select_expiration_date_button" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/create_listing_image_card"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_listing_select_expiration_date_button">

        <ImageView
            android:id="@+id/food_details_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/burger" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/create_listing_select_image_button"
        style="@style/Widget.Lishe.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/select_image"
        app:layout_constraintBottom_toBottomOf="@+id/create_listing_image_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/create_listing_image_card"
        app:layout_constraintTop_toTopOf="@id/create_listing_image_card" />

    <ImageView
        android:id="@+id/create_listing_location_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_listing_image_card"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/create_listing_location_text_view"
        style="@style/Widget.Lishe.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@id/create_listing_select_image_button"
        app:layout_constraintStart_toStartOf="@id/create_listing_select_image_button"
        app:layout_constraintTop_toTopOf="@id/create_listing_location_icon" />

    <Button
        android:id="@+id/create_listing_select_location_button"
        style="@style/Widget.Lishe.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_location"
        app:layout_constraintEnd_toEndOf="@id/create_listing_location_text_view"
        app:layout_constraintStart_toStartOf="@id/create_listing_location_text_view"
        app:layout_constraintTop_toBottomOf="@+id/create_listing_location_text_view" />

    <Button
        android:id="@+id/create_listing_button"
        style="@style/Widget.Lishe.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Create Listing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>